--- a/src/main/resources/templates/myPage/sidebar.html
+++ b/src/main/resources/templates/myPage/sidebar.html
@@ -12,23 +12,17 @@
       <i class="fa-solid fa-users"></i>&nbsp;&nbsp;내 정보
       <ul class="submenu">
         <li><a href="/myPage/info">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 정보 보기/변경</a></li>
-        <li><a href="/myPage/changePw">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;비밀번호 변경</a></li>
+        <li><a href="/myPage/changePw">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 비밀번호 변경</a></li>
         <li><a href="/myPage/preference">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 취향 보기</a></li>
       </ul>
     </h3>
-
-    <h3 class="menu">
-      <i class="fa-solid fa-arrow-trend-up"></i>&nbsp;&nbsp;구매 및 배송
-      <ul class="submenu">
-        <li><a href="/myPage/myOrder">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;구매 내역 조회</a></li>
-      </ul>
-    </h3>
-
+    
     <h3 class="menu">
       <i class="fa-solid fa-warehouse"></i>&nbsp;&nbsp;내 활동 내역
       <ul class="submenu">
+        <li><a href="/myPage/myOrder">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 구매 내역</a></li>
         <li><a href="/myPage/myReview">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 리뷰 목록</a></li>
-        <li><a href="/myPage/myWishList">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내가 찜한 목록</a></li>
+        <li><a href="/myPage/myWishList">&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;내 찜 목록</a></li>
       </ul>
     </h3>
 
